.k8s/apps/platform-gateway/platform-gateway-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-gateway
  namespace: dev-web
spec:
  selector:
    app.kubernetes.io/name: platform-gateway
  ports:
  - port: 80
    targetPort: 3000
