.k8s/apps/platform-gateway/platform-gateway-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: platform-gateway-vs
  namespace: dev-web
spec:
  hosts:
  - "*"
  gateways:
  - platform-gateway-gw
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: platform-gateway
        port:
          number: 80
